src/pages/index.module.scss
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
    "Helvetica Neue", sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

.vertical-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.scrollContainer {
  margin-top: 60px;
}

.scrollElement {
  position: relative;
}

.flex {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 1em;

  @media screen and(min-width: 60em) {
    flex-direction: row;
  }
}

.header {
  @extend .scrollElement, .vertical-center;
  min-height: calc(100vh - 60px);
  padding: 1em;
  text-align: center;
  color: white;
  background: #00b4db; /* fallback for old browsers */
  background: -webkit-linear-gradient(135deg, #0083b0, #00b4db); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    135deg,
    #0083b0,
    #00b4db
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.header button {
  padding: 0.5em 2em 0.5em 2em;
  text-transform: capitalize;
  background-color: transparent;
  border: 2px solid white;
  color: white;
  font-weight: bold;
}

.header button:hover {
  background-color: white;
  color: #0083b0;
  cursor: pointer;
}

.main-section {
  @extend .scrollElement;

  text-align: center;
}

.about {
  position: relative;
  padding: 1em;
  background: white;
  color: black;
  //min-height: calc(100vh - 60px);
}

.about button {
  padding: 0.5em 2em 0.5em 2em;
  text-transform: capitalize;
  background-color: transparent;
  border: 2px solid black;
  color: black;
  font-weight: bold;
}

.about button:hover {
  background-color: black;
  color: white;
  cursor: pointer;
}

.about-container {
  @extend .flex;
}

.about-column {
  flex: 1 1 48%;
  margin: 1%;
  overflow: hidden;
  width: 100%;

  @media screen and(min-width: 60em) {
    flex-direction: row;
  }
}

.about-column:first-child {
  margin-bottom: 1em;
  @media screen and(min-width: 60em) {
    margin-bottom: 1%; 
  }
}

.experience {
  @extend .vertical-center;

  position: relative;
  display: flex;
  text-align: center;
  min-height: calc(100vh - 60px);
  padding: 1em;
  margin: 0 auto;
  color: white;
  background: #00b4db; /* fallback for old browsers */
  background: -webkit-linear-gradient(135deg, #0083b0, #00b4db); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    135deg,
    #0083b0,
    #00b4db
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  @media screen and(min-width: 60em) {
    flex-direction: column;
  }
}

.experience ul {
  text-align: left;
}

.experience-container {
  @extend .vertical-center;

  @media screen and(min-width: 60em) {
    margin-right: 1em;
    text-align: left;
  }
}

.skills-container {
  @extend .vertical-center;

  @media screen and(min-width: 60em) {
    margin-left: 1em;
  }
}

.skills {
  display: flex;
  list-style: none;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
}

.skills li {
  margin: 0.5em;
}

.projects {
  position: relative;
  text-align: center;
  position: relative;
  margin: 0 auto;
}

.projects-row {
  @extend .vertical-center;

  position: relative;
  padding: 1em;
  min-height: calc(50vh - 60px);
  color: white;
  background: #00b4db; /* fallback for old browsers */
  background: -webkit-linear-gradient(135deg, #0083b0, #00b4db); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    135deg,
    #0083b0,
    #00b4db
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.projects-row:nth-child(odd) {
  background: white;
  color: black;

  .flex {
    @media screen and(min-width: 60em) {
      flex-direction: row-reverse;
    }
  }
}

.projects-column {
  flex: 1 1 48%;
  margin: 1%;
  text-align: center;
  overflow: hidden;
  width: 100%;

  @media screen and(min-width: 60em) {
    text-align: left;
  }
}

.projects-column button {
  padding: 0.5em 2em 0.5em 2em;
  margin-right: 1em;
  text-transform: capitalize;
  background-color: transparent;
  border: 2px solid black;
  color: black;
  font-weight: bold;
}

.projects-column button:hover {
  background-color: black;
  color: white;
  cursor: pointer;
}

.github-link {
  @extend .vertical-center;

  flex-direction: row;
  align-items: center;
  margin: 1em 0;

  @media screen and(min-width: 60em) {
    justify-content: left;
  }
}

.contact {
  @extend .vertical-center;
  min-height: calc(80vh - 60px);
  text-align: center;
  padding: 1em;
  color: white;
  background: #00b4db; /* fallback for old browsers */
  background: -webkit-linear-gradient(135deg, #0083b0, #00b4db); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    135deg,
    #0083b0,
    #00b4db
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.contactIcons {
  display: flex;
  justify-content: center;
  font-size: 3em;
}

.contactIcons svg {
  margin-left: 0.125em;
  margin-right: 0.125em;
}

.contactIcons svg:hover {
  transform: scale(1.2);
  color: #f77500;
}

.footer {
  @extend .vertical-center;
  min-height: 20vh;
  text-align: center;
  padding: 1em;
  color: white;
  background: #333;
}

.footer hr {
  margin: 0 auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  width: 50%;
  border-top: 2px solid grey;
}

.footer p {
  margin-bottom: 0;
}

